# Embedded_SNN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  convert_weights.py  data.py  run_all.py  simulate.py  simulate_input.cpp  snn_core.cpp  snn_model.py
data/: data.py  eeg_process.py
data/preprocessing/: eeg_process.py
deployment/: CMakeLists.txt  linker.ld
deployment/src/: embedded_main.cpp  main.cpp  snn_core.cpp  snn_core.h  startup_stm32f4xx.s
deployment/weights/: weights_hidden_output.txt  weights_input_hidden.txt
model/: model.py  snn_model.py
scripts/: convert_weights.py  export_weights.py  setup.sh  simulate.py  train.py
src/: main.cpp  simulate_input.cpp  snn_core.cpp  snn_core.h
